manifests/line-bot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: line-bot-webhook
  namespace: line-bot
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: line-bot-webhook
  template:
    metadata:
      labels:
        app: line-bot-webhook
    spec:
      imagePullSecrets:
      - name: gar-secret
      containers:
      - name: line-bot-webhook
        image: asia-northeast1-docker.pkg.dev/mh-api-389212/ai-kanji/webhook:5efb58b0f00d642b638d3cd2bfd0ace14c517b4c
        ports:
        - containerPort: 8080
        - containerPort: 9090
          name: metrics
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: line-bot-worker
  namespace: line-bot
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: line-bot-worker
  template:
    metadata:
      labels:
        app: line-bot-worker
    spec:
      imagePullSecrets:
      - name: gar-secret
      containers:
      - name: line-bot-worker
        image: asia-northeast1-docker.pkg.dev/mh-api-389212/ai-kanji/worker:5efb58b0f00d642b638d3cd2bfd0ace14c517b4c
        ports:
        - containerPort: 9090
          name: metrics
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
