manifests/line-bot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: line-bot
  namespace: line-bot
spec:
  ingressClassName: nginx
  rules:
  - host: line-bot.o-ga09.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: line-bot
            port:
              number: 8080
